build/log/idf_py_stderr_output_9654
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:590:5: error: label 'spiStartTransaction_ReturnERR0' defined but not used [-Werror=unused-label]
  590 |     spiStartTransaction_ReturnERR0:
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:519:13: warning: unused variable 'currTByte' [-Wunused-variable]
  519 |     uint8_t currTByte = 0, currTBit;
      |             ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:515:14: warning: unused variable 'rxBuf' [-Wunused-variable]
  515 |     uint8_t *rxBuf = (uint8_t*)dev->rBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:514:14: warning: unused variable 'txBuf' [-Wunused-variable]
  514 |     uint8_t *txBuf = (uint8_t*)dev->tBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'destroySPIDevice':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:640:8: error: 'spiDev_t' has no member named 'txdPtr'
  640 |     dev->txdPtr = NULL;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:641:8: error: 'spiDev_t' has no member named 'rxdPtr'
  641 |     dev->rxdPtr = NULL;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:642:8: error: 'spiDev_t' has no member named 'txdSize'
  642 |     dev->txdSize = 0;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:643:8: error: 'spiDev_t' has no member named 'rxdSize'
  643 |     dev->rxdSize = 0;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:645:8: error: 'spiDev_t' has no member named 'txdBitInd'
  645 |     dev->txdBitInd = 0;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:646:8: error: 'spiDev_t' has no member named 'txdByteInd'
  646 |     dev->txdByteInd = 0;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:647:8: error: 'spiDev_t' has no member named 'rxdBitInd'
  647 |     dev->rxdBitInd = 0;
      |        ^~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:648:8: error: 'spiDev_t' has no member named 'rxdByteInd'
  648 |     dev->rxdByteInd = 0;
      |        ^~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
